@@ -3762,7 +3762,7 @@ struct regen_data *status_get_regen_data(struct block_list *bl)
 
 struct status_data *status_get_status_data(struct block_list *bl)
 {
-	nullpo_retr(NULL, bl);
+	nullpo_retr(&dummy_status, bl);
 		
 	switch (bl->type) {
 		case BL_PC:
